# melange

./: .gitignore  Cargo.toml  DEVLOG.md  LICENSE  README.md  install.sh
.github/workflows/: release.yml
assets/: compat_warnings.toml  sandworm.txt
src/: app.rs  config.rs  main.rs  update.rs
src/compat/: warnings.rs
src/dune/: mod.rs  quotes.rs  terminology.rs
src/hardware/: bandwidth.rs  cpu.rs  disk.rs  engines.rs  gpu.rs  memory.rs  mod.rs  os_info.rs  vpn.rs
src/models/: catalog.rs  config_parser.rs  gguf_parser.rs  index_parser.rs  memory_calc.rs  mod.rs  ollama.rs  scanner.rs
src/ui/: catalog_panel.rs  detail_panel.rs  footer.rs  hardware_panel.rs  header.rs  help_overlay.rs  memory_panel.rs  mod.rs  models_panel.rs  splash.rs  theme.rs  warnings_overlay.rs
