[package]
name = "melange"
version = "0.1.0"
edition = "2021"
description = "The Memory Must Flow — Dune-themed local model memory analyzer for Apple Silicon"
license = "Apache-2.0"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
bytesize = "1"
dirs = "5"
toml = "0.8"
ureq = "3"
self-replace = "1"
flate2 = "1"
tar = "0.4"
